# II3160_FinalProject_AnisongRecommendationEngineIntegrationAPI_18223140

./: .coverage  .env  .gitignore  Dockerfile  LICENSE  README.md  app.db  compose.yaml  main.py  pyproject.toml  requirement.txt
.github/workflows/: ci.yaml
src/: main.py
src/models/: anisong_model.py  request_model.py  user_model.py
src/routers/: anisong.py  auth.py  preferences.py
src/services/: anisong_services.py  auth_services.py  preferences_service.py  spotify_services.py  user_services.py  youtube_service.py  youtube_services.py
src/tests/: test_overall.py
src/utils/: database.py
